--- a/.codecatalyst/workflows/Workflow_05a0.yaml
+++ b/.codecatalyst/workflows/Workflow_05a0.yaml
@@ -1,11 +1,23 @@
-Name: Workflow_05a0
+Name: PythonAppWorkflow
 SchemaVersion: "1.0"
 
-# Optional - Set automatic triggers.
 Triggers:
   - Type: Push
     Branches:
-      - master
+      - main
 
-# Required - Define action configurations.
 Actions:
+  Build:
+    Identifier: aws/build@v1
+    Inputs:
+      Sources:
+        - WorkflowSource
+    Outputs:
+      Artifacts:
+        - Name: BuildOutput
+          Files:
+            - "**/*"
+    Configuration:
+      Steps:
+        - Run: docker build -t my-python-app .
+        - Run: docker run my-python-app
