--- a/.codecatalyst/workflows/Workflow_c396.yaml
+++ b/.codecatalyst/workflows/Workflow_c396.yaml
@@ -5,6 +5,7 @@ Triggers:
   - Type: Push
     Branches:
       - master
+  - Type: WorkflowDispatch
 
 Actions:
   Build:
@@ -28,5 +29,3 @@ Actions:
         - Run: docker run my-python-app
     Packages:
       ExportAuthorizationToken: true
-
-
