--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ jobs:
   Hello-World-Job:
     runs-on:
       - codebuild-githubRunnerforTest-${{ github.run_id }}-${{ github.run_attempt }}
-      - image:custom-x86_64-637423511138.dkr.ecr.eu-west-1.amazonaws.com/runner:latest
+        image:custom-x86_64-637423511138.dkr.ecr.eu-west-1.amazonaws.com/runner:latest
     steps:
       - run: echo "Hello World Gents!"
       - run: whoami
