--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
       - codebuild-githubRunnerforTest-${{ github.run_id }}-${{ github.run_attempt }}
         image:custom-linux-637423511138.dkr.ecr.eu-west-1.amazonaws.com/runner:latest
     steps:
-      - run: echo "Hello World Gents!"
+      - run: echo "Hello World Gents this should work!"
       - run: whoami
       - run: cat /etc/passwd
       - run: cat /etc/os-release
